fix horizontal scroll bug

--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,11 @@ body {
   background-color: #f4f4f9;
   text-align: center;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 header,
@@ -53,7 +58,8 @@ footer {
   position: relative;
   margin: 20px auto;
   padding: 20px 0;
-  width: 80%;
+  max-width: 900px;
+  width: 100%;
 }
 .timeline::before {
   content: "";
@@ -77,7 +83,8 @@ footer {
   box-shadow: 0 4px 16px rgba(3, 25, 38, 0.07);
   border: 1px solid #e0e3e7;
   transition: box-shadow 0.2s;
-  width: 70%;
+  max-width: 700px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 32px 0 0 0;
